# models/User.go
@@ -7,10 +7,16 @@ type User struct {
 	Role     string `json:"role" db:"role"`
 }
 
+type UserResponse struct {
+	ID       int    `json:"id" db:"id"`
+	Username string `json:"username" db:"username"`
+	Role     string `json:"role" db:"role"`
+}
+
 type IUserRepository interface {
 	Add(user *User) error
 	Delete(id int) error
-	GetAll() ([]User, error)
+	GetAll() ([]UserResponse, error)
 	GetByID(id int) (*User, error)
 	GetByUsername(username string) (*User, error)
 }
@@ -18,6 +24,6 @@ type IUserRepository interface {
 type IUserService interface {
 	Add(username, password, role string) error
 	Delete(id int) error
-	GetAll() ([]User, error)
+	GetAll() ([]UserResponse, error)
 	GetByID(id int) (*User, error)
 }
